# genewars

./: Makefile  Makefile.am  README.md  configure.ac
bflibrary/: Makefile  Makefile.am
bflibrary/include/: bfbox.h  bfbuffer.h  bfcircle.h  bfdata.h  bfdir.h  bfdos.h  bfexe_key.h  bffile.h  bfgentab.h  bfiff.h  bfkeybd.h  bfline.h  bflog.h  bfmath.h  bfmemory.h  bfmouse.h  bfpalette.h  bfpixel.h  bfscrcopy.h  bfscreen.h  bfsprite.h  bftext.h  bftime.h  bftypes.h  bfutility.h  bfwindows.h  poly.h  rnc_1fm.h  rom.h  svesa.h
bflibrary/src/general/: arctan.c  box_clip.c  gbox.cpp  gbuffer.cpp  gcircle.cpp  gdata.cpp  gerrorlg.cpp  gexe_key.cpp  gfile.cpp  ggenf.cpp  ggengh.cpp  giff.cpp  gkeybd.cpp  gline.cpp  glog.cpp  gpalette.cpp  gscreen.cpp  gspr_col.cpp  gspr_std.cpp  gsprite.cpp  gtext.cpp  gtrig.cpp  gutility.cpp  hvline.c  pixel.c  poly.c  rnc_1fm.c  rom.c  scr_copy.c  spr_scl.c  sqroot.c
bflibrary/src/os/: sdir.c  sdir.cpp  sfile.c  sfile.cpp  skeybd.cpp  smemory.cpp  smouse.cpp  spalette.cpp  sscreen.cpp  stime.cpp  svesa.cpp  swindows.cpp
bflibrary/src/x86-dos-watcom/: sfile.c  smemory.cpp  smouse.cpp
bflibrary/src/x86-win-sdl/: sdir.c  sfile.c  skeybd.c  skeybd.cpp  smemory.c  smemory.cpp
bfmydraw/: .gitignore  Makefile  Makefile.am  configure.ac
bfmydraw/include/: drawrng.h  drawspr.h  drawsprr.h  myfont.h  mygad.h  myspr.h  mysprr.h  nldata.h  pixbuf.h  str.h
bfmydraw/src/: drawrng.cpp  drawspr.cpp  drawsprr.cpp  myfont.cpp  mygad.cpp  myspr.cpp  mysprr.cpp  nldata.cpp  pixbuf.cpp  str.cpp
bfnet2lib/: .gitignore  Makefile  Makefile.am  configure.ac
bfnet2lib/include/: ipx.h  netserv.h  serasm.h  serial.h
bfnet2lib/src/: ipx.c  netserv.c  serasm.c  serial.cpp
bfsoundlib/: .gitignore  Makefile  Makefile.am  configure.ac
bfsoundlib/include/: adpcm.h  ail.h  aila.h  aildebug.h  ailsfile.h  ailss.h  ailssa.h  ailxdig.h  ailxmidi.h  awe32.h  bfaudio.h  bfmusic.h  bfsound.h  cd.h  cd_ctrl.h  dllload.h  fade_sam.h  listsamp.h  plysample.h  realmode.h  snderror.h  sndtimer.h  streamfx.h  variable.h
bfsoundlib/src/: adpcm.cpp  ail.c  aila.c  aildebug.c  ailsfile.c  ailss.c  ailssa.c  ailxdig.c  ailxmidi.c  awe32.cpp  cd.cpp  cd_ctrl.cpp  dllload.c  fade_sam.cpp  free_aud.cpp  free_mus.cpp  free_sou.cpp  init_aud.cpp  init_mus.cpp  init_sou.cpp  is_samp.cpp  listsamp.cpp  load_mus.cpp  load_sou.cpp  mast_vol.cpp  play_sam.cpp  playsadd.cpp  realmode.cpp  samp_pan.cpp  samp_pit.cpp  samp_vol.cpp  setupaud.cpp  snderror.cpp  sndtimer.cpp  stop_all.cpp  stop_mus.cpp  stop_sam.cpp  streamfx.cpp  switchso.cpp  variable.cpp
bio/: .gitignore  Makefile  Makefile.am  configure.ac  version.mk
bio/include/: bio_ver.h  bioeng.hpp  building.hpp  buildingstat.hpp  ceditor.hpp  clone.hpp  clonepad.hpp  comppersonal.hpp  computer.hpp  control.hpp  creature.hpp  creaturestat.hpp  custom.hpp  cvector.hpp  data.hpp  draw.hpp  drone.hpp  editor.hpp  effect.hpp  effectstat.hpp  engine.hpp  ethereal.hpp  etherealz.hpp  etherealzn.hpp  etherscope.hpp  etherzone.hpp  event.hpp  eventstat.hpp  flicker.hpp  font.hpp  game.hpp  gridtile.hpp  grouppad.hpp  gupoint.hpp  iface.hpp  ifccomped.hpp  ifccomputer.hpp  ifccustom.hpp  ifceditor.hpp  ifclevel.hpp  (+54 more)
bio/res/: bio_stdres.rc
bio/src/: bioeng.cpp  building.cpp  ceditor.cpp  clone.cpp  clonepad.cpp  comppersonal.cpp  computer.cpp  control.cpp  creature.cpp  creaturestat.cpp  custom.cpp  cvector.cpp  data.cpp  draw.cpp  drone.cpp  editor.cpp  effect.cpp  effectstat.cpp  engine.cpp  ethereal.cpp  etherealz.cpp  etherealzn.cpp  etherscope.cpp  etherzone.cpp  event.cpp  eventstat.cpp  flicker.cpp  font.cpp  game.cpp  gridtile.cpp  grouppad.cpp  gupoint.cpp  iface.cpp  ifccomped.cpp  ifccomputer.cpp  ifccustom.cpp  ifceditor.cpp  ifclevel.cpp  ifcoptions.cpp  ifcplanet.cpp  (+48 more)
smacklib/: .gitignore  Makefile  Makefile.am  configure.ac
smacklib/include/: dossmk.h  rfile.h  smackinp.h  sndmss.h  sndnone.h  unsmack.h
smacklib/src/: dossmk.c  rfile.c  smackinp.c  sndmss.c  sndnone.c  unsmack.c
