#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ([2.71])

m4_define([bfmydraw_version], [0.1.0.0])

AC_INIT([bfmydraw-library], [bfmydraw_version], [mefistotelis@gmail.com], [bfmydraw])
AC_CONFIG_SRCDIR([src/drawspr.cpp])
AC_CONFIG_HEADERS([include/mdconfig.h])
AM_INIT_AUTOMAKE([foreign subdir-objects])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX

# Checks for libraries.
LT_INIT

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
